--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "next": "^9.3.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
   }
 }
