--- a/package.json
+++ b/package.json
@@ -6,16 +6,22 @@
   "dependencies": {
     "@shopify/app-bridge-react": "^1.19.0",
     "@shopify/koa-shopify-auth": "^3.1.57",
+    "@shopify/koa-shopify-graphql-proxy": "^3.3.0",
     "@shopify/polaris": "^4.16.0",
     "@zeit/next-css": "^1.0.1",
+    "apollo-boost": "^0.4.7",
     "dotenv": "^8.2.0",
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.3",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.1",
     "koa": "^2.11.0",
     "koa-session": "^5.13.1",
     "next": "^9.3.0",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react-apollo": "^3.1.3",
+    "react-dom": "^16.13.0",
+    "store-js": "^2.0.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
